--- a/src/css/style.css
+++ b/src/css/style.css
@@ -138,14 +138,16 @@ header img{
     font-size: 14px;
 }
 
-.description::-webkit-scrollbar{
-    width: 8px;
-    border-radius: 8px;
-    background-color: white;
+*::-webkit-scrollbar {
+	width: 12px;
 }
 
-.description::-webkit-scrollbar-thumb{
-    background: purple;
-    border-radius: 6px;
-    height: 4px;
+*::-webkit-scrollbar-track {
+	background: #f1e9e9;
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: #582965;
+	border-radius: 10px;
+	border: 3px solid #ffffff;
 }
